<resources>
    <string name="app_name">GM Face AI</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="convert">Convert</string>
    <string name="button">Face Detection</string>
    <string name="button2">Face Effects</string>
    <string name="txtID">TextView</string>
    <string name="disappointed_ok">Well, okay then.</string>
    <string name="face_effects">Face Effects</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="enter_name">İsim ekleyin</string>
    <string name="select_name">isim seçin</string>
    <string name="add_person">Kişi ekle</string>
    <string name="update_person">Kişiyi Güncelle</string>
    <string name="ok">OK</string>
    <string name="face_recognizer">Face Recognizer</string>
    <string name="textview">TextView</string>
    <string name="face_landmarks">Face Landmarks</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_navigation">Navigation</string>
    <string name="development_info">GENERAL MOBİLE AR-GE MERKEZİNDE GM Çalışanları Tarafından Oluşturuldu. \nDaha Fazla Bilgi için : https://github.com/general-mobile </string>
    <string name="todo">TODO</string>
    <string name="use_front_cam">*if you want single face recognation \n please use front camera</string>
    <string name="use_rear_cam">**if you want multi face recgonation \n please use rear camera</string>
</resources>
