<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3F51B5"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnFaceDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:shadowRadius="24"
            android:text="@string/button"
            android:textColor="#D3FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFaceDet2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:shadowRadius="24"
            android:text="@string/face_effects"
            android:textColor="#D3FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFaceDet3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:shadowRadius="24"
            android:text="@string/face_recognizer"
            android:textColor="#D3FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnFaceDet4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/common_google_signin_btn_text_light"
            android:shadowRadius="24"
            android:text="@string/face_landmarks"
            android:textColor="#D3FFFFFF"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:autoLink="web"
                android:gravity="center|start"
                android:textColor="#D3FFFFFF"
                android:text="@string/textview" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>